<resources xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<string name="app_name">设置</string>
	<string name="system_setting">系统设置</string>
	<string name="setting">设置</string>
	<string name="china">中文 (中文)</string>
	<string name="english">英文</string>
	<string name="preview">预览</string>
	<string name="background">背景</string>
	<string name="style">风格</string>
	<string name="blue_sky">蓝色星空</string>
    <string name="desktop_setting">桌面设置</string>
    <string name="application_manage">应用管理</string>
    <string name="net_setting">网络设置</string>
    <string name="language_input_setting">语言和键盘设置</string>
    <string name="date_time_setting">时间和日期设置</string>
	<string name="system_update">系统升级</string>
	<string name="about">关于</string>
	<string name="choice">选择</string>
	<string name="confirm">确认</string>
	<string name="back">返回</string>
	<string name="d3_setting">3D设置</string>
	<string name="audio_setting">音频设置</string>
	<string name="video_setting">视频设置</string>
	<string name="language_setting">语言设置</string>
    <string name="keyboard_setting">修改默认输入法</string>
    <string name="inpupt_setting">输入法设置</string>
	<string name="system_backup_update">系统备份升级</string>
	<string name="system_backup">系统备份</string>
	<string name="system_restore">系统还原</string>
	<string name="system_information">系统信息</string>
	<string name="system_restore_factory">恢复出厂</string>
	<string name="system_time">系统时间</string>
	<string name="local_update">本地升级</string>
	<string name="net_update">网络升级</string>
	<string name="system_net_update">系统网络升级</string>
	<string name="system_local_update">系统本地升级</string>
	<string name="download">立即下载</string>
	<string name="update">立即升级</string>
	<string name="backup">立即备份</string>
	<string name="restore">立即还原</string>
    <string name="progress">当前进度：</string>
    <string name="current_version">当前系统版本：</string>
	<string name="sdcard_success">SDCARD可以正常使用</string>
	<string name="check_new_version">正在检查新版本......</string>
	<string name="new_version">检测到新版本：</string>
    <string name="download_new_version">是否立即下载新版？</string>
    <string name="downloading">正在下载新版本......</string>
	<string name="downloaded">下载完成</string>
	<string name="upgrade_package_download_finished">网络升级包下载完成</string>
    <string name="to_update">马上升级？</string>
	<string name="updating">正在更新系统......</string>
	<string name="updated">请重新启动TV，更新程序会在重启后继续......</string>
	<string name="no_sdcard">系统不能检测到SDCARD，没有办法执行更新操作，请插入SDCARD。</string>
	<string name="sdcard">正在检测SDCARD......</string>
	<string name="exit">退出</string>
	<string name="reboot">重启TV</string>
	<string name="check_failure">安装过程中出现错误，请更换更新包。</string>
	<string name="check_success">校验成功。</string>
	<string name="latest">您的TVOS版本已经是最新的版本！</string>
	<string name="no_update_file">您的SDCard上没有最新的镜像文件</string>
	<string name="tips">请检查您存放的目录是否为：/mstara3/,文件名是否是:update_signed.zip	</string>
	<string name="upgrade_help_title">升级操作帮助：</string>
	<string name="upgrade_help_1">1.点击“立即下载”后，新软件开始下载。下载完成后，点击“立即升级”，电视进入升级状态。</string>
	<string name="upgrade_help_2">2.按遥控器“节目+”键，开始升级。</string>
	<string name="upgrade_help_3">2.升级完成后，电视进入待机状态(红色指示灯常亮)，请按遥控“节目+”键开机。</string>
	<string name="upgrade_help_4">3.升级工作完成。</string>
	<string name="attention">注意事项：</string>
	<string name="attention_1">1.升级过程中勿遥控电视或将电视断电。</string>
	<string name="attention_2">2.升级过程中当电视长时间处于黑屏待机状态时请按遥控"节目+"键开机。</string>
	<string name="attention_3">3.升级后电视将恢复出厂设置，请重新进行搜台、网络设置等其它操作。</string>
	<string name="attention_4">4.有任何疑问请联系4006999999咨询。</string>
	<string name="start_backup">SDCARD可以正常使用，您可以备份当前的TV系统，请点击开始备份。</string>
	<string name="start">开始备份</string>
	<string name="backUping">正在备份，请不要执行其他的操作，请等待......</string>
	<string name="restoring">正在恢复，请不要执行其他的操作，请等待......</string>
	<string name="start_restore">SDCARD可以正常使用，您可以恢复当前的TV系统，请点击开始恢复。</string>
	<string name="no_restore">SDCARD上面无恢复文件，无法进行系统恢复操作。</string>
	<string name="restore_start">开始恢复</string>
	<string name="restore_success">恢复完成，请重启TV</string>
	<string name="wire_mac_address">有线MAC地址</string>
	<string name="wireless_mac_address">无线MAC地址</string>
	<string name="update_list">本版本的更新内容如下：</string>
	<string name="sdcard_insert">检测到外部磁盘设备插入</string>
	<string name="sdcard_remove">检测到外部磁盘设备移除或出现异常</string>
	<string name="download_error">下载的过程中出现错误，请重新下载</string>
	<string name="read_file_error">读取文件出错，请检查SDCARD上是否有versioninfor文件</string>
	<string name="check_package">正在校验更新包......</string>
	<string name="continue_download">继续下载</string>
	<string name="is_downloading">正在下载升级包</string>
	<string name="download_ing">正在下载</string>
	<string name="notice_restore_factory">恢复出厂设置功能清单(清除TV上的所有用户数据)：</string>
    <string name="clear_google_user">。清除账户信息</string>
    <string name="system_and_app_set">。系统及应用程序数据和设置</string>
    <string name="tv_data_restore">。TV数据的出厂恢复</string>
   	<string name="notice_tv_date_restore_success">TV数据的出厂恢复成功</string>
   	<string name="notice_tv_date_restore_failed">TV数据的出厂恢复失败</string>
   	<string name="restore_factory_system_reboot">系统正在重新启动...</string>
	<string name="restore_factory_confirm_restore">是否确认恢复出厂设置 ？</string>
    <string name="err_not_enough_storage_for_cache">您的电视Cache分区没有足够的存储空间,请重启电视释放内存或插入内存足够的SDCard后再操作.</string>
    <string name="err_not_enough_storage_for_sdcard">您的电视SDCard没有足够的存储空间,请释放足够的内存后再操作.</string>
    <string name="err_not_enough_storage">您的电视没有足够的存储空间,请保证足够的内存后再操作.</string>
	<string name="net_state">网络状态</string>
	<string name="wire_setting">有线设置</string>
	<string name="wireless_setting">无线设置</string>
	<string name="dial_setting">PPPOE拨号设置</string>
	<string name="wifi_direct">WiFi Direct</string>
	<string name="pppoe_connect_format">PPPOE连接方式</string>
	<string name="pppoe_disconnect">PPPOE连接断开</string>
	<string name="auto_ip">自动获取IP地址</string>
	<string name="ip_address">IP地址</string>
	<string name="subnet_mask">子网掩码</string>
	<string name="default_geteway">默认网关</string>
	<string name="forget">忘记</string>
	<string name="first_dns">首选DNS</string>
	<string name="second_dns">备用DNS</string>
	<string name="username">用户名</string>
	<string name="password">密码</string>
	<string name="show_password">显示密码</string>
	<string name="show_password_1">显示密码：</string>
	<string name="notice_no_pwd">本wifi没有设密码请直接点击连接按钮</string>
	<string name="input_username">请输入用户名</string>
	<string name="input_password">请输入密码</string>
	<string name="auto_dialer">自动拨号</string>
	<string name="connect_format">连接方式</string>
	<string name="wire_connect">有线连接</string>
	<string name="wireless_connect">无线连接</string>
	<string name="connect_state">连接至</string>
	<string name="disconnect_state">断开状态</string>
	<string name="pppoe_connect">PPPOE连接</string>
	<string name="connect_net">连接</string>
	<string name="wifi_state_enable">WIFI不可用</string>
	<string name="pppoe_dialer">PPPOE拨号</string>
	<string name="disconnect">断开</string>
	<string name="is_dialing">正在拨号...</string>
	<string name="pppoe_status_str">PPPOE 网络状态：</string>
	<string name="dialer_hangup">挂断</string>
	<string name="dialer_ok">拨号</string>
	<string name="pppoe_authfailed">请检查用户名和密码或稍后重试</string>
	<string name="pppoe_dialing">正在拨号...</string>
	<string name="ssid_error">SSID错误.</string>
	<string name="password_null_error_wep">您输入的密码过短，需大于5个字符.</string>
	<string name="password_null_error_psk">您输入的密码过短，需大于8个字符.</string>
	<string name="password_length_error_psk">您输入的密码过长,需小于64个字符.</string>
	<string name="check_username_password">验证用户名和密码...</string>
	<string name="ssid_password_error">SSID或密码错误</string>
	<string name="check_ssid_password">验证SSID和密码...</string>
	<string name="is_getting_ip">正在获取IP地址...</string>
	<string name="is_scanning">正在扫描...</string>
	<string name="connect_success">连接成功</string>
	<string name="choice_wifi">请选择无线网络</string>
	<string name="wireless_signal">无线网络列表</string>
	<string name="internal_wifi">内置WIFI</string>
	<string name="ss_id">SSID</string>
	<string name="ss_userid">请输入</string>
    <string name="Wifi">WiFi</string>
	<string name="add">添加</string>
	<string name="add_wifi_net">添加WIFI网络</string>
	<string name="modify">请输入密码,(1-64)个字符</string>
	<string name="modify_wpa">请输入密码,(8-63)个字符</string>
	<string name="modify_wep">请输入密码,不少于5个字符</string>
	<string name="wifi_net">WiFi网络</string>
	<string name="net_ssid">网络SSID：</string>
    <string name="wifi_secure">安全性:</string>
    <string name="none">无</string>
    <string name="secure_wep">WEP</string>
    <string name="secure_wpa">WPA/WPA2 PSK</string>
    <string name="secure_eap">802.1×EAP</string>
	<string name="net_password">密码：</string>
	<string name="modigy_password">建立连接</string>
	<string name="save">保存</string>
	<string name="connect_to">连接</string>
	<string name="scanning">正在扫描WiFi网络</string>
	<string name="select_wifi_scan">点此选择无线网络</string>
	<string name="eth_able">有线网络可用</string>
	<string name="eth_enable">有线网络不可用</string>
	<string name="eth_unkonw">有线网络状态未知</string>
	<string name="wifi_able">无线网络可用</string>
	<string name="wifi_enable">无线网络不可用</string>
	<string name="check_ip">验证IP地址</string>
	<string name="check_default">验证网关</string>
	<string name="check_net_mask">验证子网掩码</string>
	<string name="check_first_dns">验证DNS</string>
	<string name="check_ip_failure">验证IP地址失败</string>
	<string name="check_default_failure">验证网关失败</string>
	<string name="check_netmask_failure">验证子网掩码失败</string>
	<string name="check_dns_failure">验证DNS失败</string>
	<string name="wire_con_failure">有线连接失败,请验证是否插入网线。</string>
	<string name="wire_has_wire">网线已经插入,可以进行有线连接。</string>
	<string name="pppoe_auto_success">PPPOE自动拨号成功。</string>
	<string name="pppoe_connect_success">PPPOE拨号成功。</string>
	<string name="pppoe_auto_failure">PPPOE自动拨号失败，请验证是否插入网线或者是用户名和密码错误。</string>
	<string name="new_msg">您有新消息了。</string>
	<string name="pppoe_tips">PPPOE自动拨号提示信息</string>
	<string name="update_packages_download">正在进行更新包的下载</string>
	<string name="please_hangup_pppoe">请先挂断PPPOE拨号网络</string>
	<string name="please_insert_dongle">请插入无线网卡</string>
	<string name="no_single_list">没有可用的无线网络</string>
    <string name="please_switch_wire">请先关闭无线网络</string>
	<string name="please_switch_wifeless">请先切换到无线网络连接</string>
	<string name="device_name">设备名称：</string>
	<string name="device_status">设备状态：</string>
	<string name="device_address">设备地址：</string>
	<string name="wlan_direct_device">WLan Direct设备</string>
	<string name="device_discover">搜索</string>
	<string name="device_list">设备列表：</string>
	<string name="wifi_direct_connect">连接</string>
	<string name="wifi_direct_disconnect">断开</string>
	<string name="wifi_direct_cancel">按返回键取消操作</string>
	<string name="wifi_direct_search">正在搜索...</string>
	<string name="device_search_failed">搜索失败！</string>
	<string name="device_search_success">搜索成功！</string>
	<string name="please_open_direct">请开启wifi direct功能</string>
	<string name="wifi_hotspot">WiFi热点</string>
	<string name="config_wifi_hotspot">配置WiFi热点</string>
	<string name="wifi_net_ssid">网络SSID</string>
	<string name="wifi_hotspot_secure">安全性</string>
	<string name="password_min_length">密码至少应包含8个字符</string>
	<string name="wifi_security_wpa">WPA PSK</string>
    <string name="wifi_security_wpa2">WPA2 PSK</string>
    <string name="wifi_security_open">无</string>
    <string name="wifiap_pwd_notice">密码至少应包含8个字符，请重新输入</string>
    <string name="morning">上午</string>
    <string name="afternoon">下午</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="date_setting">日期设置</string>
    <string name="time_setting">时间设置</string>
	<string name="force_stop">强制停止</string>
	<string name="uninstall_app">卸载</string>
	<string name="clear_data">清除数据</string>
	<string name="ok">确定</string>
	<string name="cancle">取消</string>
    <string name="bluetooth_discoverable_timeout">可检测到设备的时间超时</string>
    <string name="twominute">2分钟</string>
    <string name="fiveminute">5分钟</string>
    <string name="onehour">1小时</string>
    <string name="never">从不</string>
</resources>