
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/upgrade_help"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:visibility="invisible" >
		<TextView 
		    android:id="@+id/help_title"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textColor="#c8c8c8"
		    android:text="@string/upgrade_help_title"
		    />
		<TextView 
		    android:id="@+id/upgrade_help_1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textColor="#c8c8c8"
		    android:layout_marginLeft="30dip"
		    android:text="@string/upgrade_help_1"
		    />
<!-- 
		<TextView 
		    android:id="@+id/upgrade_help_2"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textColor="#c8c8c8"
		    android:layout_marginLeft="30dip"
		    android:text="@string/upgrade_help_2"
		    />
-->
		<TextView 
		    android:id="@+id/upgrade_help_3"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textColor="#c8c8c8"
		    android:layout_marginLeft="30dip"
		    android:text="@string/upgrade_help_3"
		    />
		<TextView 
		    android:id="@+id/upgrade_help_4"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textColor="#c8c8c8"
		    android:layout_marginLeft="30dip"
		    android:text="@string/upgrade_help_4"
		    />
		<TextView 
		    android:id="@+id/attention_title"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textColor="#c8c8c8"
		    android:text="@string/attention"
		    />
		<TextView 
		    android:id="@+id/attention_help1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textColor="#c8c8c8"
		    android:layout_marginLeft="30dip"
		    android:text="@string/attention_1"
		    />
		<TextView 
		    android:id="@+id/attention_help2"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textColor="#c8c8c8"
		    android:layout_marginLeft="30dip"
		    android:text="@string/attention_2"
		    />
		<TextView 
		    android:id="@+id/attention_help3"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textColor="#c8c8c8"
		    android:layout_marginLeft="30dip"
		    android:text="@string/attention_3"
		    />
		<TextView 
		    android:id="@+id/attention_help4"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textColor="#c8c8c8"
		    android:layout_marginLeft="30dip"
		    android:text="@string/attention_4"
		    />
    </LinearLayout>
