<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:minHeight="50dip"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/date_setting"
        android:textColor="#CCCCCCCC"
        android:textSize="24sp"
        android:layout_marginTop="10dip" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="80dip"
            android:text="@string/year"
            android:textColor="#FFFFFFFF"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/year_et"
            android:layout_width="200dip"
            android:layout_height="40dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="80dip"
            android:background="@drawable/edit_text_large"
            android:gravity="center"
            android:maxLength="4"
            android:numeric="integer"
            android:singleLine="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="80dip"
            android:text="@string/month"
            android:textColor="#FFFFFFFF"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/month_et"
            android:layout_width="200dip"
            android:layout_height="40dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="80dip"
            android:background="@drawable/edit_text_large"
            android:gravity="center"
            android:maxLength="2"
            android:numeric="integer"
            android:singleLine="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="80dip"
            android:text="@string/day"
            android:textColor="#FFFFFFFF"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/day_et"
            android:layout_width="200dip"
            android:layout_height="40dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="80dip"
            android:background="@drawable/edit_text_large"
            android:gravity="center"
            android:nextFocusDown="@+id/setting_date_ok"
            android:maxLength="2"
            android:numeric="integer"
            android:singleLine="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip" >

        <Button
            android:id="@+id/setting_date_ok"
            android:layout_width="150dip"
            android:layout_height="70dip"
            android:layout_centerVertical="true"
            android:layout_marginLeft="80dip"
            android:background="@drawable/button_change"
            android:text="@string/setting"
            android:textColor="#FFFFFFFF"
            android:textSize="28sp" />

        <Button
            android:id="@+id/cannel_date_setting"
            android:layout_width="150dip"
            android:layout_height="60dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="80dip"
            android:background="@drawable/button_change"
            android:text="@string/cancle"
            android:textColor="#FFFFFFFF"
            android:textSize="28sp" />
    </RelativeLayout>

</LinearLayout>